Update jupyter notbook

--- a/1_AE_model_training.ipynb
+++ b/1_AE_model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,7 @@
     "    evaluation_test,\n",
     "    save_models,\n",
     "    load_models,\n",
+    "    save_model_performance,\n",
     ")\n",
     "\n",
     "seed = 123\n",
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -668,6 +669,8 @@
     "    \"breast_cancer\",\n",
     "    ]\n",
     "\n",
+    "performance_list = []\n",
+    "\n",
     "#### Select dataset ####\n",
     "for dataset_name in dataset: \n",
     "    print(f\"Dataset Name: [{dataset_name}]\")\n",
@@ -704,7 +707,19 @@
     "    models = load_models(X_train.shape[-1], dataset_name)\n",
     "\n",
     "    ### Print out accuracy on testset.\n",
-    "    evaluation_test(models, X_test, y_test)"
+    "    evaluation_test(models, X_test, y_test)\n",
+    "\n",
+    "    performance_list.append(save_model_performance(models, dataset_name, X_test, y_test))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_performance_table = pd.concat([pd.DataFrame.from_dict(k) for k in (performance_list)])\n",
+    "model_performance_table.to_csv(f\"./saved_models/model_performance_table.csv\",index=False)"
    ]
   },
   {
