--- a/2_AE_generate_ae.ipynb
+++ b/2_AE_generate_ae.ipynb
@@ -62,8 +62,8 @@
     "RUN_DEEPFOOL = False\n",
     "RUN_CARLINI = False\n",
     "RUN_LOWPROFOOL = False\n",
-    "RUN_BOUNDARY = False\n",
-    "RUN_HOPSKIPJUMP = True"
+    "RUN_BOUNDARY = True\n",
+    "RUN_HOPSKIPJUMP = False"
    ]
   },
   {
@@ -203,7 +203,7 @@
     "                    num_instances,\n",
     "                    X_test,\n",
     "                    y_test,\n",
-    "                    models_to_run=[\"dt\",\"rfc\",\"lr\",\"svc\",\"nn\",\"nn_2\"], # \n",
+    "                    models_to_run=[\"dt\",\"rfc\",\"lr\",\"svc\",\"nn_2\"], # \n",
     "                )\n",
     "            boundary_datapoints = process_datapoints(boundary_results)\n",
     "            save_datapoints_as_npy(\"boundary\", dataset_name, boundary_datapoints)\n",
@@ -219,7 +219,7 @@
     "                    X_test,\n",
     "                    y_test,\n",
     "                    norm=2,\n",
-    "                    models_to_run=[\"dt\",\"rfc\",\"lr\",\"svc\",\"nn\",\"nn_2\"], # \"dt\",\"rfc\",\"lr\",\"svc\",\"nn\",\"nn_2\"\n",
+    "                    models_to_run=[\"dt\",\"rfc\",\"lr\",\"svc\",\"nn_2\"], # \"dt\",\"rfc\",\"lr\",\"svc\",\"nn\",\"nn_2\"\n",
     "            )\n",
     "            hopskipjump_l_2_datapoints = process_datapoints(hopskipjump_l_2_results)\n",
     "            save_datapoints_as_npy(\"hopskipjump_l_2\", dataset_name, hopskipjump_l_2_datapoints)\n",
@@ -284,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.4 | packaged by conda-forge | (main, Mar 30 2022, 08:38:02) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
