--- a/2_AE_generate_ae.ipynb
+++ b/2_AE_generate_ae.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\n10599070\\Miniconda3\\envs\\xai\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import pandas as pd\n",
@@ -47,18 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TF version:  2.10.0\n",
-      "Eager execution enabled:  False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
     "\n",
@@ -72,22 +54,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "num_instances = 'all' # (1) 64 - 1 batch & (2) \"all\"\n",
     "\n",
     "RUN_DEEPFOOL = False\n",
-    "RUN_CARLINI = True\n",
+    "RUN_CARLINI = False\n",
     "RUN_LOWPROFOOL = False\n",
-    "RUN_BOUNDARY = False\n",
+    "RUN_BOUNDARY = True\n",
     "RUN_HOPSKIPJUMP = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,8 +80,8 @@
     "    if data_type_mixed:\n",
     "        dataset = [\n",
     "        \"adult\",\n",
-    "        \"german\",\n",
-    "        \"compas\",\n",
+    "        # \"german\",\n",
+    "        # \"compas\",\n",
     "        ]\n",
     "    else:\n",
     "        dataset = [\n",
@@ -222,7 +204,7 @@
     "                    num_instances,\n",
     "                    X_test,\n",
     "                    y_test,\n",
-    "                    models_to_run=[\"dt\",\"gbc\",\"lr\",\"svc\",\"nn_2\"], # \n",
+    "                    models_to_run=[\"dt\",\"gbc\",\"lr\",\"svc\",\"nn_2\"], # \"dt\",\"gbc\",\"lr\",\"svc\",\"nn_2\"\n",
     "                )\n",
     "            boundary_datapoints = process_datapoints(boundary_results)\n",
     "            save_datapoints_as_npy(\"boundary\", dataset_name, boundary_datapoints, running_times)\n",
@@ -279,561 +261,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "========================================\n",
-      "| Experiment 9 \n",
-      "========================================\n",
-      "Dataset Name: [adult]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\n10599070\\Miniconda3\\envs\\xai\\lib\\site-packages\\keras\\engine\\training_v1.py:2356: UserWarning: `Model.state_updates` will be removed in a future version. This property should not be used in TensorFlow 2.0, as `updates` are applied automatically.\n",
-      "  updates=self.state_updates,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Feature range:\n",
-      "(0, 1)\n",
-      "Finding adversarial examples for lr\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_2: 100%|██████████| 101/101 [00:31<00:00,  3.24it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for svc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_2: 100%|██████████| 101/101 [00:15<00:00,  6.60it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for nn_2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_2: 100%|██████████| 101/101 [01:38<00:00,  1.03it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original data points and adversarial examples have been saved to ./datapoints/carlini_l_2_adult\n",
-      "Result has been saved to ./results/carlini_l_2_adult\n",
-      "Feature range:\n",
-      "(0, 1)\n",
-      "Finding adversarial examples for lr\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_inf: 100%|██████████| 6464/6464 [06:22<00:00, 16.92it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for svc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_inf: 100%|██████████| 6464/6464 [04:09<00:00, 25.88it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for nn_2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_inf: 100%|██████████| 6464/6464 [32:51<00:00,  3.28it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original data points and adversarial examples have been saved to ./datapoints/carlini_l_inf_adult\n",
-      "Result has been saved to ./results/carlini_l_inf_adult\n",
-      "Dataset Name: [german]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\n10599070\\Miniconda3\\envs\\xai\\lib\\site-packages\\keras\\engine\\training_v1.py:2356: UserWarning: `Model.state_updates` will be removed in a future version. This property should not be used in TensorFlow 2.0, as `updates` are applied automatically.\n",
-      "  updates=self.state_updates,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Feature range:\n",
-      "(0, 1)\n",
-      "Finding adversarial examples for lr\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_2: 100%|██████████| 3/3 [00:00<00:00,  3.12it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for svc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_2: 100%|██████████| 3/3 [00:00<00:00,  6.38it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for nn_2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_2: 100%|██████████| 3/3 [00:03<00:00,  1.10s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original data points and adversarial examples have been saved to ./datapoints/carlini_l_2_german\n",
-      "Result has been saved to ./results/carlini_l_2_german\n",
-      "Feature range:\n",
-      "(0, 1)\n",
-      "Finding adversarial examples for lr\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_inf: 100%|██████████| 192/192 [00:11<00:00, 16.39it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for svc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_inf: 100%|██████████| 192/192 [00:07<00:00, 24.44it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for nn_2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_inf: 100%|██████████| 192/192 [01:00<00:00,  3.17it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original data points and adversarial examples have been saved to ./datapoints/carlini_l_inf_german\n",
-      "Result has been saved to ./results/carlini_l_inf_german\n",
-      "Dataset Name: [compas]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\n10599070\\Miniconda3\\envs\\xai\\lib\\site-packages\\keras\\engine\\training_v1.py:2356: UserWarning: `Model.state_updates` will be removed in a future version. This property should not be used in TensorFlow 2.0, as `updates` are applied automatically.\n",
-      "  updates=self.state_updates,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Feature range:\n",
-      "(0, 1)\n",
-      "Finding adversarial examples for lr\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_2: 100%|██████████| 22/22 [00:06<00:00,  3.44it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for svc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_2: 100%|██████████| 22/22 [00:03<00:00,  7.30it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for nn_2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_2: 100%|██████████| 22/22 [00:26<00:00,  1.23s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original data points and adversarial examples have been saved to ./datapoints/carlini_l_2_compas\n",
-      "Result has been saved to ./results/carlini_l_2_compas\n",
-      "Feature range:\n",
-      "(0, 1)\n",
-      "Finding adversarial examples for lr\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_inf: 100%|██████████| 1408/1408 [01:15<00:00, 18.61it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for svc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_inf: 100%|██████████| 1408/1408 [00:50<00:00, 28.13it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for nn_2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_inf: 100%|██████████| 1408/1408 [07:24<00:00,  3.16it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original data points and adversarial examples have been saved to ./datapoints/carlini_l_inf_compas\n",
-      "Result has been saved to ./results/carlini_l_inf_compas\n",
-      "Dataset Name: [diabetes]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\n10599070\\Miniconda3\\envs\\xai\\lib\\site-packages\\keras\\engine\\training_v1.py:2356: UserWarning: `Model.state_updates` will be removed in a future version. This property should not be used in TensorFlow 2.0, as `updates` are applied automatically.\n",
-      "  updates=self.state_updates,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Feature range:\n",
-      "(0, 1)\n",
-      "Finding adversarial examples for lr\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_2: 100%|██████████| 2/2 [00:00<00:00,  3.82it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for svc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_2: 100%|██████████| 2/2 [00:00<00:00,  6.94it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for nn_2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_2: 100%|██████████| 2/2 [00:02<00:00,  1.10s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original data points and adversarial examples have been saved to ./datapoints/carlini_l_2_diabetes\n",
-      "Result has been saved to ./results/carlini_l_2_diabetes\n",
-      "Feature range:\n",
-      "(0, 1)\n",
-      "Finding adversarial examples for lr\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_inf: 100%|██████████| 128/128 [00:08<00:00, 14.59it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for svc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_inf: 100%|██████████| 128/128 [00:06<00:00, 20.42it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for nn_2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_inf: 100%|██████████| 128/128 [00:51<00:00,  2.46it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original data points and adversarial examples have been saved to ./datapoints/carlini_l_inf_diabetes\n",
-      "Result has been saved to ./results/carlini_l_inf_diabetes\n",
-      "Dataset Name: [breast_cancer]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\n10599070\\Miniconda3\\envs\\xai\\lib\\site-packages\\keras\\engine\\training_v1.py:2356: UserWarning: `Model.state_updates` will be removed in a future version. This property should not be used in TensorFlow 2.0, as `updates` are applied automatically.\n",
-      "  updates=self.state_updates,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Feature range:\n",
-      "(0, 1)\n",
-      "Finding adversarial examples for lr\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_2: 100%|██████████| 1/1 [00:00<00:00,  3.74it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for svc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_2: 100%|██████████| 1/1 [00:00<00:00,  7.75it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for nn_2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_2: 100%|██████████| 1/1 [00:01<00:00,  1.44s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original data points and adversarial examples have been saved to ./datapoints/carlini_l_2_breast_cancer\n",
-      "Result has been saved to ./results/carlini_l_2_breast_cancer\n",
-      "Feature range:\n",
-      "(0, 1)\n",
-      "Finding adversarial examples for lr\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_inf: 100%|██████████| 64/64 [00:04<00:00, 14.49it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for svc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_inf: 100%|██████████| 64/64 [00:02<00:00, 22.32it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding adversarial examples for nn_2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C&W L_inf: 100%|██████████| 64/64 [00:29<00:00,  2.17it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original data points and adversarial examples have been saved to ./datapoints/carlini_l_inf_breast_cancer\n",
-      "Result has been saved to ./results/carlini_l_inf_breast_cancer\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for running_times in range(0,10):\n",
+    "for running_times in range(0,1):\n",
     "    print_block(\"Experiment \" + str(running_times))\n",
     "\n",
     "    run_experiment(data_type_mixed=True, running_times=running_times)\n",
-    "    run_experiment(data_type_mixed=False, running_times=running_times)"
+    "    # run_experiment(data_type_mixed=False, running_times=running_times)"
    ]
   },
   {
