Update from home

--- a/2_AE_generate_ae.ipynb
+++ b/2_AE_generate_ae.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\mithr\\anaconda3\\envs\\xai\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "c:\\Users\\mithr\\anaconda3\\envs\\xai\\lib\\site-packages\\art\\estimators\\certification\\__init__.py:13: UserWarning: PyTorch not found. Not importing DeepZ functionality\n",
+      "  warnings.warn(\"PyTorch not found. Not importing DeepZ functionality\")\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import pandas as pd\n",
@@ -38,9 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TF version:  2.10.0\n",
+      "Eager execution enabled:  False\n"
+     ]
+    }
+   ],
    "source": [
     "import warnings\n",
     "\n",
@@ -54,22 +74,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "num_instances = 'all' # (1) 64 - 1 batch & (2) \"all\"\n",
     "\n",
     "RUN_DEEPFOOL = False\n",
-    "RUN_CARLINI = False\n",
+    "RUN_CARLINI = True\n",
     "RUN_LOWPROFOOL = False\n",
-    "RUN_BOUNDARY = True\n",
+    "RUN_BOUNDARY = False\n",
     "RUN_HOPSKIPJUMP = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,8 +99,8 @@
     "    \"\"\"\n",
     "    if data_type_mixed:\n",
     "        dataset = [\n",
-    "        \"adult\",\n",
-    "        # \"german\",\n",
+    "        # \"adult\",\n",
+    "        \"german\",\n",
     "        # \"compas\",\n",
     "        ]\n",
     "    else:\n",
@@ -135,19 +155,19 @@
     "\n",
     "        if RUN_CARLINI:\n",
     "\n",
-    "            carlini_l_2_results = util_carlini.generate_carlini_result(\n",
-    "                    df_info,\n",
-    "                    models,\n",
-    "                    num_instances,\n",
-    "                    X_test,\n",
-    "                    y_test,\n",
-    "                    norm=\"l_2\", #[\"l_2\", \"l_inf\"]\n",
-    "                    models_to_run=[\"lr\",\"svc\",\"nn_2\"],\n",
-    "                )\n",
-    "            carlini_l_2_datapoints = process_datapoints(carlini_l_2_results)\n",
-    "            save_datapoints_as_npy(\"carlini_l_2\", dataset_name, carlini_l_2_datapoints, running_times)\n",
-    "            carlini_l_2_result_dfs = process_result(carlini_l_2_results, df_info)\n",
-    "            save_result_as_csv(\"carlini_l_2\", dataset_name, carlini_l_2_result_dfs, running_times)\n",
+    "            # carlini_l_2_results = util_carlini.generate_carlini_result(\n",
+    "            #         df_info,\n",
+    "            #         models,\n",
+    "            #         num_instances,\n",
+    "            #         X_test,\n",
+    "            #         y_test,\n",
+    "            #         norm=\"l_2\", #[\"l_2\", \"l_inf\"]\n",
+    "            #         models_to_run=[\"lr\",\"svc\",\"nn_2\"],\n",
+    "            #     )\n",
+    "            # carlini_l_2_datapoints = process_datapoints(carlini_l_2_results)\n",
+    "            # save_datapoints_as_npy(\"carlini_l_2\", dataset_name, carlini_l_2_datapoints, running_times)\n",
+    "            # carlini_l_2_result_dfs = process_result(carlini_l_2_results, df_info)\n",
+    "            # save_result_as_csv(\"carlini_l_2\", dataset_name, carlini_l_2_result_dfs, running_times)\n",
     "\n",
     "            carlini_l_inf_results = util_carlini.generate_carlini_result(\n",
     "                    df_info,\n",
@@ -261,11 +281,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "========================================\n",
+      "| Experiment 20 \n",
+      "========================================\n",
+      "Dataset Name: [german]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\mithr\\anaconda3\\envs\\xai\\lib\\site-packages\\keras\\engine\\training_v1.py:2356: UserWarning: `Model.state_updates` will be removed in a future version. This property should not be used in TensorFlow 2.0, as `updates` are applied automatically.\n",
+      "  updates=self.state_updates,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature range:\n",
+      "(0, 1)\n",
+      "Finding adversarial examples for lr\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C&W L_inf: 100%|██████████| 192/192 [00:24<00:00,  8.00it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding adversarial examples for svc\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C&W L_inf: 100%|██████████| 192/192 [00:16<00:00, 11.66it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding adversarial examples for nn_2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C&W L_inf: 100%|██████████| 192/192 [04:13<00:00,  1.32s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original data points and adversarial examples have been saved to ./datapoints/carlini_l_inf_german\n",
+      "Result has been saved to ./results/carlini_l_inf_german\n"
+     ]
+    }
+   ],
    "source": [
-    "for running_times in range(0,1):\n",
+    "for running_times in range(20, 21):\n",
     "    print_block(\"Experiment \" + str(running_times))\n",
     "\n",
     "    run_experiment(data_type_mixed=True, running_times=running_times)\n",
@@ -296,12 +388,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "350746cdd709c967d80ca4cb0f1d2cbf04d079be136a05ad7342c703ce6b7c0e"
+    "hash": "5372a90187f05abdb7392726881158217660b0fad03ab7bdeca2ae0a854d393b"
    }
   }
  },
